--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	top: 0px;
+bottom: 10px;
+left: 45%;
 }
 
 .thumbnail {
@@ -68,14 +69,42 @@ body {
 	margin: 20px 0px;
 }
 
+
+
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot90 {}
+.rot90 {
+
+	transform: rotate(90deg);
+	transition: all 1s ease;
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+	
+	transform: rotate(180deg);
+	transition: all 1s ease;
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+	
+	transform: rotate(270deg);
+	transition: all 1s ease;
+}
+
+/*Hover effect*/
+#nextPhoto:hover {
+	opacity: 0.8;
+}
+
+#prevPhoto:hover {
+	opacity: 0.8;
+}
+
+.thumbnail {
+	max-width: 100%;
+	object-fit: fill;
+}
