--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body {
-	overflow: auto;
-	font-family: 'Century Gothic', sans-serif;
-	background-image: url(../img/geometry.jpg);
+	background-image: url(https://media.istockphoto.com/id/893107732/photo/blazing-fire-flame-black-and-white-for-background-and-abstract.jpg?s=612x612&w=0&k=20&c=ZlY5UlJAWNRNcArUq-AsfDjumvhqzH2TPbczakBOKuM=);
+	max-width: auto;
+	min-height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
 
 #photoBooth {
@@ -12,9 +15,9 @@ body {
 	margin-right: auto;
 	background-color: white;
 	border-radius: 2px;
-}	
+}
 
-#slideShow {	
+#slideShow {
 	position: relative;
 }
 
@@ -30,8 +33,8 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-bottom: 10px;
-left: 45%;
+	bottom: 10px;
+	left: 45%;
 }
 
 .thumbnail {
@@ -63,6 +66,7 @@ left: 45%;
 .details p {
 	margin-top: 20px;
 }
+
 .details {
 	border: 1px #000 dashed;
 	padding: 0px 10px;
@@ -82,7 +86,7 @@ Make it animate nicely. You'll need CSS3 for this*/
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot180 {
-	
+
 	transform: rotate(180deg);
 	transition: all 1s ease;
 }
@@ -90,7 +94,121 @@ Make it animate nicely. You'll need CSS3 for this*/
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot270 {
-	
+
+	transform: rotate(270deg);
+	transition: all 1s ease;
+}
+
+/*Hover effect*/
+#nextPhoto:hover {
+	opacity: 0.8;
+}
+
+#prevPhoto:hover {
+	opacity: 0.8;
+}
+
+.thumbnail {
+	max-width: 100%;
+	object-fit: fill;
+}body {
+	font-family: 'Century Gothic', sans-serif;
+	background-image: url(https://media.istockphoto.com/id/893107732/photo/blazing-fire-flame-black-and-white-for-background-and-abstract.jpg?s=612x612&w=0&k=20&c=ZlY5UlJAWNRNcArUq-AsfDjumvhqzH2TPbczakBOKuM=);
+	max-width: 100%;
+	height: auto;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+
+#photoBooth {
+	margin-top: .2em;
+	padding: 10px;
+	width: 650px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	border-radius: 2px;
+}
+
+#slideShow {
+	position: relative;
+}
+
+.photoHolder {
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.moreIndicator {
+	height: 50px;
+	width: 50px;
+	position: absolute;
+	z-index: 3;
+	opacity: .8;
+	bottom: 10px;
+	left: 45%;
+}
+
+.thumbnail {
+	position: relative;
+	box-shadow: 1px 3px 20px 0px;
+}
+
+
+.banner {
+	text-align: center;
+	font-size: 1.25em;
+}
+
+#nav {
+	clear: both;
+	position: relative;
+}
+
+#prevPhoto {
+	height: 42px;
+	width: 42px;
+}
+
+#nextPhoto {
+	height: 42px;
+	width: 42px;
+}
+
+.details p {
+	margin-top: 20px;
+}
+
+.details {
+	border: 1px #000 dashed;
+	padding: 0px 10px;
+	margin: 20px 0px;
+}
+
+
+
+/*Add CSS styles to rotate the element 90deg
+Make it animate nicely. You'll need CSS3 for this*/
+.rot90 {
+
+	transform: rotate(90deg);
+	transition: all 1s ease;
+}
+
+/*Add CSS styles to rotate the element 180deg
+Make it animate nicely. You'll need CSS3 for this*/
+.rot180 {
+
+	transform: rotate(180deg);
+	transition: all 1s ease;
+}
+
+/*Add CSS styles to rotate the element 270deg
+Make it animate nicely. You'll need CSS3 for this*/
+.rot270 {
+
 	transform: rotate(270deg);
 	transition: all 1s ease;
 }
